# SampleDevice

./: CMakeLists.txt  README.md
cmake/: SampleDeviceDependencies.cmake
include/SampleDevice/: ExamplePlugin.h  HelloDevice.h
src/: ExamplePlugin.cxx  HelloDevice.cxx  hello-device.json  runHelloDevice.cxx
